ARROW-17995: [C++] Fix json decimals not being rescaled based on the explicit schema